# Text-RPG-system

./: LICENSE  README.md  combat_entity.py  game.py  game_tester.py  player.py  pyproject.toml
dungeon/: __init__.py  __main__.py  const.py  decision_tree.py  dialogues.py  enemy.py  generators.py  item.py  room.py
dungeon/dialogues/: intro.txt  left_branch.txt  left_right_branch.txt  main.txt  right_branch.txt  right_right_branch.txt  test_continues_dialogue.yaml  test_d.yaml
rpg system excersize/: dungeon.py  enemy.py  main.py
simple excersizes/: main.py
spec/docs/: NPC_design.md  combat.md  dungeon_design.md
